--- a/proj.win32/SoulKnight.vcxproj
+++ b/proj.win32/SoulKnight.vcxproj
@@ -100,7 +100,8 @@
       </Command>
     </PostBuildEvent>
     <PreLinkEvent>
-      <Command></Command>
+      <Command>
+      </Command>
     </PreLinkEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup>
@@ -112,7 +113,6 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)\Resources\" /D /E /I /F /Y
       <Inputs>$(TargetFileName)</Inputs>
     </CustomBuildStep>
   </ItemDefinitionGroup>
-
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
       <Optimization>MaxSpeed</Optimization>
@@ -143,17 +143,34 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)\Resources\" /D /E /I /F /Y
       </Command>
     </PostBuildEvent>
     <PreLinkEvent>
-      <Command></Command>
+      <Command>
+      </Command>
     </PreLinkEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\Classes\Actor\Actor.cpp" />
+    <ClCompile Include="..\Classes\Actor\Hero.cpp" />
+    <ClCompile Include="..\Classes\Actor\Monster.cpp" />
     <ClCompile Include="..\Classes\AppDelegate.cpp" />
-    <ClCompile Include="..\Classes\HelloWorldScene.cpp" />
+    <ClCompile Include="..\Classes\Component\Bullet.cpp" />
+    <ClCompile Include="..\Classes\Component\StateComponent.cpp" />
+    <ClCompile Include="..\Classes\Component\Weapon.cpp" />
+    <ClCompile Include="..\Classes\Scene\MainScene.cpp" />
+    <ClCompile Include="..\Classes\Scene\PauseLayer.cpp" />
+    <ClCompile Include="..\Classes\Scene\StartGameScene.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\Classes\Actor\Actor.h" />
+    <ClInclude Include="..\Classes\Actor\Hero.h" />
+    <ClInclude Include="..\Classes\Actor\Monster.h" />
     <ClInclude Include="..\Classes\AppDelegate.h" />
-    <ClInclude Include="..\Classes\HelloWorldScene.h" />
+    <ClInclude Include="..\Classes\Component\Bullet.h" />
+    <ClInclude Include="..\Classes\Component\StateComponent.h" />
+    <ClInclude Include="..\Classes\Component\Weapon.h" />
+    <ClInclude Include="..\Classes\Scene\MainScene.h" />
+    <ClInclude Include="..\Classes\Scene\PauseLayer.h" />
+    <ClInclude Include="..\Classes\Scene\StartGameScene.h" />
     <ClInclude Include="main.h" />
   </ItemGroup>
   <ItemGroup>
