--- a/proj.win32/SoulKnight.vcxproj
+++ b/proj.win32/SoulKnight.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{76A39BB2-9B84-4C65-98A5-654D86B86F2A}</ProjectGuid>
     <RootNamespace>test_win32</RootNamespace>
     <Keyword>Win32Proj</Keyword>
+    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -155,10 +156,14 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)\Resources\" /D /E /I /F /Y
     <ClCompile Include="..\Classes\Component\Bullet.cpp" />
     <ClCompile Include="..\Classes\Component\StateComponent.cpp" />
     <ClCompile Include="..\Classes\Component\Weapon.cpp" />
+    <ClCompile Include="..\Classes\HelloWorldScene.cpp" />
     <ClCompile Include="..\Classes\Scene\MainScene.cpp" />
     <ClCompile Include="..\Classes\Scene\PauseLayer.cpp" />
     <ClCompile Include="..\Classes\Scene\StartGameScene.cpp" />
+    <ClCompile Include="..\Classes\secondScene.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="..\Classes\Component\Pistol.cpp" />
+    <ClCompile Include="..\Classes\Component\PistolBullet.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Classes\Actor\Actor.h" />
@@ -167,11 +172,17 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)\Resources\" /D /E /I /F /Y
     <ClInclude Include="..\Classes\AppDelegate.h" />
     <ClInclude Include="..\Classes\Component\Bullet.h" />
     <ClInclude Include="..\Classes\Component\StateComponent.h" />
-    <ClInclude Include="..\Classes\Component\Weapon.h" />
+    <ClInclude Include="..\Classes\Component\Weapon.h">
+      <DeploymentContent>false</DeploymentContent>
+    </ClInclude>
+    <ClInclude Include="..\Classes\HelloWorldScene.h" />
     <ClInclude Include="..\Classes\Scene\MainScene.h" />
     <ClInclude Include="..\Classes\Scene\PauseLayer.h" />
     <ClInclude Include="..\Classes\Scene\StartGameScene.h" />
+    <ClInclude Include="..\Classes\secondScene.h" />
     <ClInclude Include="main.h" />
+    <ClInclude Include="..\Classes\Component\Pistol.h" />
+    <ClInclude Include="..\Classes\Component\PistolBullet.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\cocos2d\cocos\2d\libcocos2d.vcxproj">
