--- a/proj.win32/SoulKnight.vcxproj
+++ b/proj.win32/SoulKnight.vcxproj
@@ -156,8 +156,8 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)\Resources\" /D /E /I /F /Y
     <ClCompile Include="..\Classes\Component\StateComponent.cpp" />
     <ClCompile Include="..\Classes\Component\Weapon.cpp" />
     <ClCompile Include="..\Classes\HelloWorldScene.cpp" />
+    <ClCompile Include="..\Classes\PauseLayer.cpp" />
     <ClCompile Include="..\Classes\Scene\MainScene.cpp" />
-    <ClCompile Include="..\Classes\Scene\PauseLayer.cpp" />
     <ClCompile Include="..\Classes\Scene\StartGameScene.cpp" />
     <ClCompile Include="..\Classes\secondScene.cpp" />
     <ClCompile Include="main.cpp" />
@@ -171,8 +171,8 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)\Resources\" /D /E /I /F /Y
     <ClInclude Include="..\Classes\Component\StateComponent.h" />
     <ClInclude Include="..\Classes\Component\Weapon.h" />
     <ClInclude Include="..\Classes\HelloWorldScene.h" />
+    <ClInclude Include="..\Classes\PauseLayer.h" />
     <ClInclude Include="..\Classes\Scene\MainScene.h" />
-    <ClInclude Include="..\Classes\Scene\PauseLayer.h" />
     <ClInclude Include="..\Classes\Scene\StartGameScene.h" />
     <ClInclude Include="..\Classes\secondScene.h" />
     <ClInclude Include="main.h" />
