--- a/proj.win32/SoulKnight.vcxproj.filters
+++ b/proj.win32/SoulKnight.vcxproj.filters
@@ -33,9 +33,6 @@
     <ClCompile Include="..\Classes\Component\StateComponent.cpp">
       <Filter>src\Component</Filter>
     </ClCompile>
-    <ClCompile Include="..\Classes\Scene\PauseLayer.cpp">
-      <Filter>src\Scene</Filter>
-    </ClCompile>
     <ClCompile Include="..\Classes\Scene\MainScene.cpp">
       <Filter>src\Scene</Filter>
     </ClCompile>
@@ -56,6 +53,7 @@
     </ClCompile>
     <ClCompile Include="..\Classes\HelloWorldScene.cpp" />
     <ClCompile Include="..\Classes\secondScene.cpp" />
+    <ClCompile Include="..\Classes\PauseLayer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -69,9 +67,6 @@
     </ClInclude>
     <ClInclude Include="..\Classes\Component\StateComponent.h">
       <Filter>src\Component</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Classes\Scene\PauseLayer.h">
-      <Filter>src\Scene</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\Scene\MainScene.h">
       <Filter>src\Scene</Filter>
@@ -93,6 +88,7 @@
     </ClInclude>
     <ClInclude Include="..\Classes\HelloWorldScene.h" />
     <ClInclude Include="..\Classes\secondScene.h" />
+    <ClInclude Include="..\Classes\PauseLayer.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="game.rc">
