merge出错，还在乱改中
...

--- a/proj.win32/SoulKnight.vcxproj.filters
+++ b/proj.win32/SoulKnight.vcxproj.filters
@@ -54,6 +54,14 @@
     <ClCompile Include="..\Classes\Component\Bullet.cpp">
       <Filter>src\Component</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\Component\Pistol.cpp">
+      <Filter>src\Component</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\Component\PistolBullet.cpp">
+      <Filter>src\Component</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\HelloWorldScene.cpp" />
+    <ClCompile Include="..\Classes\secondScene.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -89,6 +97,14 @@
     <ClInclude Include="..\Classes\Component\Bullet.h">
       <Filter>src\Component</Filter>
     </ClInclude>
+    <ClInclude Include="..\Classes\Component\Pistol.h">
+      <Filter>src\Component</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Component\PistolBullet.h">
+      <Filter>src\Component</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\HelloWorldScene.h" />
+    <ClInclude Include="..\Classes\secondScene.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="game.rc">
