Basic Map Realize
This version can only show A basic map, but some other class had been realized.
这个版本运行只能显示一张空地图，但大部分基类已经架构好，缺少实现。

--- a/proj.win32/SoulKnight.vcxproj.filters
+++ b/proj.win32/SoulKnight.vcxproj.filters
@@ -19,6 +19,9 @@
     <Filter Include="src\Actor">
       <UniqueIdentifier>{622d5e88-ba0d-437b-96c0-9038bd34b8f6}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\Weapon">
+      <UniqueIdentifier>{7ee11805-0553-4a76-a67a-b9567f4ba2b5}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -30,17 +33,11 @@
     <ClCompile Include="..\Classes\Scene\StartGameScene.cpp">
       <Filter>src\Scene</Filter>
     </ClCompile>
-    <ClCompile Include="..\Classes\Component\StateComponent.cpp">
-      <Filter>src\Component</Filter>
-    </ClCompile>
     <ClCompile Include="..\Classes\Scene\PauseLayer.cpp">
       <Filter>src\Scene</Filter>
     </ClCompile>
     <ClCompile Include="..\Classes\Scene\MainScene.cpp">
       <Filter>src\Scene</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Classes\Component\Weapon.cpp">
-      <Filter>src\Component</Filter>
     </ClCompile>
     <ClCompile Include="..\Classes\Actor\Actor.cpp">
       <Filter>src\Actor</Filter>
@@ -51,8 +48,14 @@
     <ClCompile Include="..\Classes\Actor\Monster.cpp">
       <Filter>src\Actor</Filter>
     </ClCompile>
-    <ClCompile Include="..\Classes\Component\Bullet.cpp">
-      <Filter>src\Component</Filter>
+    <ClCompile Include="..\Classes\Actor\Bullet.cpp">
+      <Filter>src\Actor</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\Weapon\Weapon.cpp">
+      <Filter>src\Weapon</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\Scene\MapLayer.cpp">
+      <Filter>src\Scene</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -65,17 +68,11 @@
     <ClInclude Include="..\Classes\Scene\StartGameScene.h">
       <Filter>src\Scene</Filter>
     </ClInclude>
-    <ClInclude Include="..\Classes\Component\StateComponent.h">
-      <Filter>src\Component</Filter>
-    </ClInclude>
     <ClInclude Include="..\Classes\Scene\PauseLayer.h">
       <Filter>src\Scene</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\Scene\MainScene.h">
       <Filter>src\Scene</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Classes\Component\Weapon.h">
-      <Filter>src\Component</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\Actor\Actor.h">
       <Filter>src\Actor</Filter>
@@ -86,8 +83,20 @@
     <ClInclude Include="..\Classes\Actor\Monster.h">
       <Filter>src\Actor</Filter>
     </ClInclude>
-    <ClInclude Include="..\Classes\Component\Bullet.h">
+    <ClInclude Include="..\Classes\Actor\Bullet.h">
+      <Filter>src\Actor</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Weapon\Weapon.h">
+      <Filter>src\Weapon</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Component\Constant.h">
       <Filter>src\Component</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Component\State.h">
+      <Filter>src\Component</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Scene\MapLayer.h">
+      <Filter>src\Scene</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
