--- a/proj.win32/SoulKnight.vcxproj
+++ b/proj.win32/SoulKnight.vcxproj
@@ -149,28 +149,30 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)\Resources\" /D /E /I /F /Y
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\Classes\Actor\Actor.cpp" />
+    <ClCompile Include="..\Classes\Actor\Bullet.cpp" />
     <ClCompile Include="..\Classes\Actor\Hero.cpp" />
     <ClCompile Include="..\Classes\Actor\Monster.cpp" />
     <ClCompile Include="..\Classes\AppDelegate.cpp" />
-    <ClCompile Include="..\Classes\Component\Bullet.cpp" />
-    <ClCompile Include="..\Classes\Component\StateComponent.cpp" />
-    <ClCompile Include="..\Classes\Component\Weapon.cpp" />
     <ClCompile Include="..\Classes\Scene\MainScene.cpp" />
+    <ClCompile Include="..\Classes\Scene\MapLayer.cpp" />
     <ClCompile Include="..\Classes\Scene\PauseLayer.cpp" />
     <ClCompile Include="..\Classes\Scene\StartGameScene.cpp" />
+    <ClCompile Include="..\Classes\Weapon\Weapon.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Classes\Actor\Actor.h" />
+    <ClInclude Include="..\Classes\Actor\Bullet.h" />
     <ClInclude Include="..\Classes\Actor\Hero.h" />
     <ClInclude Include="..\Classes\Actor\Monster.h" />
     <ClInclude Include="..\Classes\AppDelegate.h" />
-    <ClInclude Include="..\Classes\Component\Bullet.h" />
-    <ClInclude Include="..\Classes\Component\StateComponent.h" />
-    <ClInclude Include="..\Classes\Component\Weapon.h" />
+    <ClInclude Include="..\Classes\Component\Constant.h" />
+    <ClInclude Include="..\Classes\Component\State.h" />
     <ClInclude Include="..\Classes\Scene\MainScene.h" />
+    <ClInclude Include="..\Classes\Scene\MapLayer.h" />
     <ClInclude Include="..\Classes\Scene\PauseLayer.h" />
     <ClInclude Include="..\Classes\Scene\StartGameScene.h" />
+    <ClInclude Include="..\Classes\Weapon\Weapon.h" />
     <ClInclude Include="main.h" />
   </ItemGroup>
   <ItemGroup>
