--- a/proj.win32/SoulKnight.vcxproj
+++ b/proj.win32/SoulKnight.vcxproj
@@ -149,9 +149,12 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)\Resources\" /D /E /I /F /Y
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\Classes\Actor\Actor.cpp" />
+    <ClCompile Include="..\Classes\Actor\Box.cpp" />
     <ClCompile Include="..\Classes\Actor\Bullet.cpp" />
     <ClCompile Include="..\Classes\Actor\Hero.cpp" />
+    <ClCompile Include="..\Classes\Actor\MapPortal.cpp" />
     <ClCompile Include="..\Classes\Actor\Monster.cpp" />
+    <ClCompile Include="..\Classes\Actor\RecoverProp.cpp" />
     <ClCompile Include="..\Classes\AppDelegate.cpp" />
     <ClCompile Include="..\Classes\Scene\MainScene.cpp" />
     <ClCompile Include="..\Classes\Scene\MapLayer.cpp" />
@@ -162,9 +165,12 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)\Resources\" /D /E /I /F /Y
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Classes\Actor\Actor.h" />
+    <ClInclude Include="..\Classes\Actor\Box.h" />
     <ClInclude Include="..\Classes\Actor\Bullet.h" />
     <ClInclude Include="..\Classes\Actor\Hero.h" />
+    <ClInclude Include="..\Classes\Actor\MapPortal.h" />
     <ClInclude Include="..\Classes\Actor\Monster.h" />
+    <ClInclude Include="..\Classes\Actor\RecoverProp.h" />
     <ClInclude Include="..\Classes\AppDelegate.h" />
     <ClInclude Include="..\Classes\Component\Constant.h" />
     <ClInclude Include="..\Classes\Component\State.h" />
