add class MovingActor
加入了MovingActor类，继承自Actor，派生出Hero和Monster，大致架构了Monster类

--- a/Resources/data/HeroData.plist
+++ b/Resources/data/HeroData.plist
@@ -31,6 +31,8 @@
       <true></true>
       <key>RotationEnable</key>
       <false>0</false>
+      <key>VelocityLimit</key>
+      <real>100</real>
     </dict>
     <key>Knight</key>
     <dict>
