--- a/proj.win32/SoulKnight.vcxproj.filters
+++ b/proj.win32/SoulKnight.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="..\Classes\Actor\Box.cpp">
       <Filter>src\Actor</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\Actor\MovingActor.cpp">
+      <Filter>src\Actor</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -114,6 +117,9 @@
       <Filter>src\Actor</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\Actor\Box.h">
+      <Filter>src\Actor</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Actor\MovingActor.h">
       <Filter>src\Actor</Filter>
     </ClInclude>
   </ItemGroup>
