--- a/Resources/data/PropData.plist
+++ b/Resources/data/PropData.plist
@@ -3,5 +3,18 @@
 <plist version="1.0">
   <dict>
     <key>SmallRed</key>
+    <dict>
+      <key>Type</key>
+      <string>HP</string>
+      <key>RecoverNum</key>
+      <integer>2</integer>
+    </dict>
+    <key>SmallBlue</key>
+    <dict>
+      <key>Type</key>
+      <string>Power</string>
+      <key>RecoverNum</key>
+      <integer>200</integer>
+    </dict>
   </dict>
 </plist>
