--- a/Resources/data/WeaponData.plist
+++ b/Resources/data/WeaponData.plist
@@ -16,5 +16,19 @@
         <integer>2</integer>
       </dict>
     </dict>
+    <key>RedGun</key>
+    <dict>
+      <key>GapTime</key>
+      <real>0.5</real>
+      <key>Name</key>
+      <string>Weapon</string>
+      <key>PowerCost</key>
+      <integer>0</integer>
+      <key>BulletData</key>
+      <dict>
+        <key>Damage</key>
+        <integer>2</integer>
+      </dict>
+    </dict>
   </dict>
 </plist>
