--- a/proj.win32/SoulKnight.vcxproj
+++ b/proj.win32/SoulKnight.vcxproj
@@ -150,39 +150,48 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)\Resources\" /D /E /I /F /Y
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\Classes\Actor\Actor.cpp" />
+    <ClCompile Include="..\Classes\Actor\Bullet.cpp" />
     <ClCompile Include="..\Classes\Actor\Hero.cpp" />
     <ClCompile Include="..\Classes\Actor\Monster.cpp" />
     <ClCompile Include="..\Classes\AppDelegate.cpp" />
     <ClCompile Include="..\Classes\Component\Bullet.cpp" />
+    <ClCompile Include="..\Classes\Component\State.cpp" />
     <ClCompile Include="..\Classes\Component\StateComponent.cpp" />
     <ClCompile Include="..\Classes\Component\Weapon.cpp" />
     <ClCompile Include="..\Classes\HelloWorldScene.cpp" />
     <ClCompile Include="..\Classes\Scene\MainScene.cpp" />
+    <ClCompile Include="..\Classes\Scene\MapLayer.cpp" />
     <ClCompile Include="..\Classes\Scene\PauseLayer.cpp" />
     <ClCompile Include="..\Classes\Scene\StartGameScene.cpp" />
     <ClCompile Include="..\Classes\secondScene.cpp" />
+    <ClCompile Include="..\Classes\Weapon\MeleeWeapon.cpp" />
+    <ClCompile Include="..\Classes\Weapon\Shotgun.cpp" />
+    <ClCompile Include="..\Classes\Weapon\SingleShotgun.cpp" />
+    <ClCompile Include="..\Classes\Weapon\Weapon.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="..\Classes\Component\Pistol.cpp" />
-    <ClCompile Include="..\Classes\Component\PistolBullet.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Classes\Actor\Actor.h" />
+    <ClInclude Include="..\Classes\Actor\Bullet.h" />
     <ClInclude Include="..\Classes\Actor\Hero.h" />
     <ClInclude Include="..\Classes\Actor\Monster.h" />
     <ClInclude Include="..\Classes\AppDelegate.h" />
     <ClInclude Include="..\Classes\Component\Bullet.h" />
+    <ClInclude Include="..\Classes\Component\Constant.h" />
+    <ClInclude Include="..\Classes\Component\State.h" />
     <ClInclude Include="..\Classes\Component\StateComponent.h" />
-    <ClInclude Include="..\Classes\Component\Weapon.h">
-      <DeploymentContent>false</DeploymentContent>
-    </ClInclude>
+    <ClInclude Include="..\Classes\Component\Weapon.h" />
     <ClInclude Include="..\Classes\HelloWorldScene.h" />
     <ClInclude Include="..\Classes\Scene\MainScene.h" />
+    <ClInclude Include="..\Classes\Scene\MapLayer.h" />
     <ClInclude Include="..\Classes\Scene\PauseLayer.h" />
     <ClInclude Include="..\Classes\Scene\StartGameScene.h" />
     <ClInclude Include="..\Classes\secondScene.h" />
+    <ClInclude Include="..\Classes\Weapon\MeleeWeapon.h" />
+    <ClInclude Include="..\Classes\Weapon\Shotgun.h" />
+    <ClInclude Include="..\Classes\Weapon\SingleShotgun.h" />
+    <ClInclude Include="..\Classes\Weapon\Weapon.h" />
     <ClInclude Include="main.h" />
-    <ClInclude Include="..\Classes\Component\Pistol.h" />
-    <ClInclude Include="..\Classes\Component\PistolBullet.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\cocos2d\cocos\2d\libcocos2d.vcxproj">
