--- a/proj.win32/SoulKnight.vcxproj.filters
+++ b/proj.win32/SoulKnight.vcxproj.filters
@@ -19,6 +19,9 @@
     <Filter Include="src\Actor">
       <UniqueIdentifier>{622d5e88-ba0d-437b-96c0-9038bd34b8f6}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\Weapon">
+      <UniqueIdentifier>{a5c6f2f7-34a4-49db-a95e-1494b4d05f7d}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -27,19 +30,16 @@
     <ClCompile Include="..\Classes\AppDelegate.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="..\Classes\Scene\StartGameScene.cpp">
-      <Filter>src\Scene</Filter>
+    <ClCompile Include="..\Classes\HelloWorldScene.cpp">
+      <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="..\Classes\Component\StateComponent.cpp">
-      <Filter>src\Component</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Classes\Scene\PauseLayer.cpp">
-      <Filter>src\Scene</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Classes\Scene\MainScene.cpp">
-      <Filter>src\Scene</Filter>
+    <ClCompile Include="..\Classes\secondScene.cpp">
+      <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="..\Classes\Actor\Actor.cpp">
+      <Filter>src\Actor</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\Actor\Bullet.cpp">
       <Filter>src\Actor</Filter>
     </ClCompile>
     <ClCompile Include="..\Classes\Actor\Hero.cpp">
@@ -51,20 +51,38 @@
     <ClCompile Include="..\Classes\Component\Bullet.cpp">
       <Filter>src\Component</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\Component\State.cpp">
+      <Filter>src\Component</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\Component\StateComponent.cpp">
+      <Filter>src\Component</Filter>
+    </ClCompile>
     <ClCompile Include="..\Classes\Component\Weapon.cpp">
       <Filter>src\Component</Filter>
     </ClCompile>
-    <ClCompile Include="..\Classes\Component\Pistol.cpp">
-      <Filter>src\Component</Filter>
+    <ClCompile Include="..\Classes\Weapon\MeleeWeapon.cpp">
+      <Filter>src\Weapon</Filter>
     </ClCompile>
-    <ClCompile Include="..\Classes\Component\PistolBullet.cpp">
-      <Filter>src\Component</Filter>
+    <ClCompile Include="..\Classes\Weapon\Shotgun.cpp">
+      <Filter>src\Weapon</Filter>
     </ClCompile>
-    <ClCompile Include="..\Classes\HelloWorldScene.cpp">
-      <Filter>src</Filter>
+    <ClCompile Include="..\Classes\Weapon\SingleShotgun.cpp">
+      <Filter>src\Weapon</Filter>
     </ClCompile>
-    <ClCompile Include="..\Classes\secondScene.cpp">
-      <Filter>src</Filter>
+    <ClCompile Include="..\Classes\Weapon\Weapon.cpp">
+      <Filter>src\Weapon</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\Scene\MainScene.cpp">
+      <Filter>src\Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\Scene\MapLayer.cpp">
+      <Filter>src\Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\Scene\PauseLayer.cpp">
+      <Filter>src\Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\Scene\StartGameScene.cpp">
+      <Filter>src\Scene</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -74,22 +92,16 @@
     <ClInclude Include="..\Classes\AppDelegate.h">
       <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="..\Classes\Scene\StartGameScene.h">
-      <Filter>src\Scene</Filter>
+    <ClInclude Include="..\Classes\HelloWorldScene.h">
+      <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="..\Classes\Component\StateComponent.h">
-      <Filter>src\Component</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Classes\Scene\PauseLayer.h">
-      <Filter>src\Scene</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Classes\Scene\MainScene.h">
-      <Filter>src\Scene</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Classes\Component\Weapon.h">
-      <Filter>src\Component</Filter>
+    <ClInclude Include="..\Classes\secondScene.h">
+      <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\Actor\Actor.h">
+      <Filter>src\Actor</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Actor\Bullet.h">
       <Filter>src\Actor</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\Actor\Hero.h">
@@ -101,17 +113,41 @@
     <ClInclude Include="..\Classes\Component\Bullet.h">
       <Filter>src\Component</Filter>
     </ClInclude>
-    <ClInclude Include="..\Classes\Component\Pistol.h">
+    <ClInclude Include="..\Classes\Component\Constant.h">
       <Filter>src\Component</Filter>
     </ClInclude>
-    <ClInclude Include="..\Classes\Component\PistolBullet.h">
+    <ClInclude Include="..\Classes\Component\State.h">
       <Filter>src\Component</Filter>
     </ClInclude>
-    <ClInclude Include="..\Classes\HelloWorldScene.h">
-      <Filter>src</Filter>
+    <ClInclude Include="..\Classes\Component\StateComponent.h">
+      <Filter>src\Component</Filter>
     </ClInclude>
-    <ClInclude Include="..\Classes\secondScene.h">
-      <Filter>src</Filter>
+    <ClInclude Include="..\Classes\Component\Weapon.h">
+      <Filter>src\Component</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Weapon\MeleeWeapon.h">
+      <Filter>src\Weapon</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Weapon\Shotgun.h">
+      <Filter>src\Weapon</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Weapon\SingleShotgun.h">
+      <Filter>src\Weapon</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Weapon\Weapon.h">
+      <Filter>src\Weapon</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Scene\MainScene.h">
+      <Filter>src\Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Scene\MapLayer.h">
+      <Filter>src\Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Scene\PauseLayer.h">
+      <Filter>src\Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Scene\StartGameScene.h">
+      <Filter>src\Scene</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
