revert to last verson
revert to last verson

--- a/proj.win32/SoulKnight.vcxproj.filters
+++ b/proj.win32/SoulKnight.vcxproj.filters
@@ -20,7 +20,7 @@
       <UniqueIdentifier>{622d5e88-ba0d-437b-96c0-9038bd34b8f6}</UniqueIdentifier>
     </Filter>
     <Filter Include="src\Weapon">
-      <UniqueIdentifier>{7ee11805-0553-4a76-a67a-b9567f4ba2b5}</UniqueIdentifier>
+      <UniqueIdentifier>{95c0d0a0-ef82-4541-9ed7-4cbb8ab93c22}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -33,11 +33,17 @@
     <ClCompile Include="..\Classes\Scene\StartGameScene.cpp">
       <Filter>src\Scene</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\Component\StateComponent.cpp">
+      <Filter>src\Component</Filter>
+    </ClCompile>
     <ClCompile Include="..\Classes\Scene\PauseLayer.cpp">
       <Filter>src\Scene</Filter>
     </ClCompile>
     <ClCompile Include="..\Classes\Scene\MainScene.cpp">
       <Filter>src\Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\Component\Weapon.cpp">
+      <Filter>src\Component</Filter>
     </ClCompile>
     <ClCompile Include="..\Classes\Actor\Actor.cpp">
       <Filter>src\Actor</Filter>
@@ -48,26 +54,31 @@
     <ClCompile Include="..\Classes\Actor\Monster.cpp">
       <Filter>src\Actor</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\Component\Bullet.cpp">
+      <Filter>src\Component</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\HelloWorldScene.cpp" />
+    <ClCompile Include="..\Classes\secondScene.cpp" />
     <ClCompile Include="..\Classes\Actor\Bullet.cpp">
       <Filter>src\Actor</Filter>
     </ClCompile>
-    <ClCompile Include="..\Classes\Weapon\Weapon.cpp">
-      <Filter>src\Weapon</Filter>
+    <ClCompile Include="..\Classes\Component\State.cpp">
+      <Filter>src\Component</Filter>
     </ClCompile>
     <ClCompile Include="..\Classes\Scene\MapLayer.cpp">
       <Filter>src\Scene</Filter>
     </ClCompile>
-    <ClCompile Include="..\Classes\Actor\MapPortal.cpp">
-      <Filter>src\Actor</Filter>
+    <ClCompile Include="..\Classes\Weapon\Weapon.cpp">
+      <Filter>src\Weapon</Filter>
     </ClCompile>
-    <ClCompile Include="..\Classes\Actor\RecoverProp.cpp">
-      <Filter>src\Actor</Filter>
+    <ClCompile Include="..\Classes\Weapon\Shotgun.cpp">
+      <Filter>src\Weapon</Filter>
     </ClCompile>
-    <ClCompile Include="..\Classes\Actor\Box.cpp">
-      <Filter>src\Actor</Filter>
+    <ClCompile Include="..\Classes\Weapon\SingleShotgun.cpp">
+      <Filter>src\Weapon</Filter>
     </ClCompile>
-    <ClCompile Include="..\Classes\Actor\MovingActor.cpp">
-      <Filter>src\Actor</Filter>
+    <ClCompile Include="..\Classes\Weapon\MeleeWeapon.cpp">
+      <Filter>src\Weapon</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -80,11 +91,17 @@
     <ClInclude Include="..\Classes\Scene\StartGameScene.h">
       <Filter>src\Scene</Filter>
     </ClInclude>
+    <ClInclude Include="..\Classes\Component\StateComponent.h">
+      <Filter>src\Component</Filter>
+    </ClInclude>
     <ClInclude Include="..\Classes\Scene\PauseLayer.h">
       <Filter>src\Scene</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\Scene\MainScene.h">
       <Filter>src\Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Component\Weapon.h">
+      <Filter>src\Component</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\Actor\Actor.h">
       <Filter>src\Actor</Filter>
@@ -95,11 +112,13 @@
     <ClInclude Include="..\Classes\Actor\Monster.h">
       <Filter>src\Actor</Filter>
     </ClInclude>
+    <ClInclude Include="..\Classes\Component\Bullet.h">
+      <Filter>src\Component</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\HelloWorldScene.h" />
+    <ClInclude Include="..\Classes\secondScene.h" />
     <ClInclude Include="..\Classes\Actor\Bullet.h">
       <Filter>src\Actor</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Classes\Weapon\Weapon.h">
-      <Filter>src\Weapon</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\Component\Constant.h">
       <Filter>src\Component</Filter>
@@ -110,17 +129,17 @@
     <ClInclude Include="..\Classes\Scene\MapLayer.h">
       <Filter>src\Scene</Filter>
     </ClInclude>
-    <ClInclude Include="..\Classes\Actor\MapPortal.h">
-      <Filter>src\Actor</Filter>
+    <ClInclude Include="..\Classes\Weapon\Weapon.h">
+      <Filter>src\Weapon</Filter>
     </ClInclude>
-    <ClInclude Include="..\Classes\Actor\RecoverProp.h">
-      <Filter>src\Actor</Filter>
+    <ClInclude Include="..\Classes\Weapon\Shotgun.h">
+      <Filter>src\Weapon</Filter>
     </ClInclude>
-    <ClInclude Include="..\Classes\Actor\Box.h">
-      <Filter>src\Actor</Filter>
+    <ClInclude Include="..\Classes\Weapon\SingleShotgun.h">
+      <Filter>src\Weapon</Filter>
     </ClInclude>
-    <ClInclude Include="..\Classes\Actor\MovingActor.h">
-      <Filter>src\Actor</Filter>
+    <ClInclude Include="..\Classes\Weapon\MeleeWeapon.h">
+      <Filter>src\Weapon</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
