--- a/Resources/data/WeaponData.plist
+++ b/Resources/data/WeaponData.plist
@@ -1,101 +1,90 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+
 <plist version="1.0">
+  <dict>
+    <key>Shotgun</key>
     <dict>
-        <key>frames</key>
-        <dict>
-            <key>hatchet.png</key>
-            <dict>
-                <key>aliases</key>
-                <array/>
-                <key>spriteOffset</key>
-                <string>{0,0}</string>
-                <key>spriteSize</key>
-                <string>{111,60}</string>
-                <key>spriteSourceSize</key>
-                <string>{111,60}</string>
-                <key>textureRect</key>
-                <string>{{130,21},{111,60}}</string>
-                <key>textureRotated</key>
-                <false/>
-            </dict>
-            <key>lightsaber.png</key>
-            <dict>
-                <key>aliases</key>
-                <array/>
-                <key>spriteOffset</key>
-                <string>{0,0}</string>
-                <key>spriteSize</key>
-                <string>{117,21}</string>
-                <key>spriteSourceSize</key>
-                <string>{117,21}</string>
-                <key>textureRect</key>
-                <string>{{80,0},{117,21}}</string>
-                <key>textureRotated</key>
-                <false/>
-            </dict>
-            <key>machinegun.png</key>
-            <dict>
-                <key>aliases</key>
-                <array/>
-                <key>spriteOffset</key>
-                <string>{0,0}</string>
-                <key>spriteSize</key>
-                <string>{70,32}</string>
-                <key>spriteSourceSize</key>
-                <string>{70,32}</string>
-                <key>textureRect</key>
-                <string>{{0,21},{70,32}}</string>
-                <key>textureRotated</key>
-                <false/>
-            </dict>
-            <key>pistol.png</key>
-            <dict>
-                <key>aliases</key>
-                <array/>
-                <key>spriteOffset</key>
-                <string>{0,0}</string>
-                <key>spriteSize</key>
-                <string>{60,38}</string>
-                <key>spriteSourceSize</key>
-                <string>{60,38}</string>
-                <key>textureRect</key>
-                <string>{{70,21},{60,38}}</string>
-                <key>textureRotated</key>
-                <false/>
-            </dict>
-            <key>shotgun.png</key>
-            <dict>
-                <key>aliases</key>
-                <array/>
-                <key>spriteOffset</key>
-                <string>{0,0}</string>
-                <key>spriteSize</key>
-                <string>{80,18}</string>
-                <key>spriteSourceSize</key>
-                <string>{80,18}</string>
-                <key>textureRect</key>
-                <string>{{0,0},{80,18}}</string>
-                <key>textureRotated</key>
-                <false/>
-            </dict>
-        </dict>
-        <key>metadata</key>
-        <dict>
-            <key>format</key>
-            <integer>3</integer>
-            <key>pixelFormat</key>
-            <string>RGBA8888</string>
-            <key>premultiplyAlpha</key>
-            <false/>
-            <key>realTextureFileName</key>
-            <string>WeaponData.png</string>
-            <key>size</key>
-            <string>{241,81}</string>
-            <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:e1556e4d28017125f5311f36966ddf5f:8d2206c4425cc05c3508d5a937834d46:d0e6d5619d7118c22f32b64c06e00ea3$</string>
-            <key>textureFileName</key>
-            <string>WeaponData.png</string>
-        </dict>
+      <key>GapTime</key>
+      <real>0.5</real>
+      <key>Name</key>
+      <string>Weapon</string>
+      <key>PowerCost</key>
+      <integer>3</integer>
+      <key>BulletData</key>
+      <dict>
+        <key>Damage</key>
+        <integer>4</integer>
+      </dict>
     </dict>
+    <key>Redgun</key>
+    <dict>
+      <key>GapTime</key>
+      <real>0.5</real>
+      <key>Name</key>
+      <string>Weapon</string>
+      <key>PowerCost</key>
+      <integer>2</integer>
+      <key>BulletData</key>
+      <dict>
+        <key>Damage</key>
+        <integer>5</integer>
+      </dict>
+    </dict>
+    <key>Pistol</key>
+    <dict>
+      <key>GapTime</key>
+      <real>0.3</real>
+      <key>Name</key>
+      <string>Weapon</string>
+      <key>PowerCost</key>
+      <integer>0</integer>
+      <key>BulletData</key>
+      <dict>
+        <key>Damage</key>
+        <integer>2</integer>
+      </dict>
+    </dict>
+    <key>Lightsaber</key>
+    <dict>
+      <key>GapTime</key>
+      <real>0.3</real>
+      <key>Name</key>
+      <string>Weapon</string>
+      <key>PowerCost</key>
+      <integer>2</integer>
+      <key>BulletData</key>
+      <dict>
+        <key>Damage</key>
+        <integer>5</integer>
+      </dict>
+    </dict>
+    <key>Hatchet</key>
+    <dict>
+      <key>GapTime</key>
+      <real>0.7</real>
+      <key>Name</key>
+      <string>Weapon</string>
+      <key>PowerCost</key>
+      <integer>2</integer>
+      <key>BulletData</key>
+      <dict>
+        <key>Damage</key>
+        <integer>6</integer>
+      </dict>
+    </dict>
+    <key>Machinegun</key>
+    <dict>
+      <key>GapTime</key>
+      <real>0.15</real>
+      <key>Name</key>
+      <string>Weapon</string>
+      <key>PowerCost</key>
+      <integer>1</integer>
+      <key>BulletData</key>
+      <dict>
+        <key>Damage</key>
+        <integer>2</integer>
+      </dict>
+    </dict>
+  </dict>
 </plist>
